# U7Revisited

./: .U7Revisited Tasks.txt.kate-swp  .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  Justfile  LICENSE  PATHFIND.md  README.md  ROADMAP.md  SCRIPTING_GUIDE.md  SCRIPTS.md  U7Revisited Design.txt  U7Revisited Tasks.txt  U7Revisited.filters  U7Revisited.sln  U7Revisited.vcxproj  U7Revisited.vcxproj.filters  buildit.cmd  makefile  meson.build  premake-VisualStudio.bat  u7  u7.bat  u7revisited-raylib.sln  u7revisited.code-workspace  u7revisited.sln  usecode.dc
.Clairvoyance/: editor-session.json  library.md  ui-state.json  workspace-session.json
.github/workflows/: ci-linux.yml  ci-windows.yml  clang-format-check.yml
Ghost/: ghost.desktop  ghost.rc  runlog.txt
Ghost/Data/: ghost.cfg
Ghost/Gui/: bloop.ghost  ghost_app.ghost  ghost_color_dialog.ghost  ghost_components.ghost  ghost_components2.ghost  ghost_content.ghost  ghost_font_select.ghost  ghost_menu.ghost  ghost_open_file.ghost  ghost_prop_checkbox.ghost  ghost_prop_iconbutton.ghost  ghost_prop_list.ghost  ghost_prop_listbox.ghost  ghost_prop_octagonbox.ghost  ghost_prop_panel.ghost  ghost_prop_radiobutton.ghost  ghost_prop_scrollbar.ghost  ghost_prop_slider.ghost  ghost_prop_sprite.ghost  ghost_prop_stretchbutton.ghost  ghost_prop_textarea.ghost  ghost_prop_textbutton.ghost  ghost_prop_textinput.ghost  ghost_sprite_dialog.ghost  ghost_table.ghost  ghost_tools.ghost  listbox.ghost
Linux/U7Revisited/nbproject/: Makefile-Debug-Steam.mk  Makefile-Debug.mk  Makefile-Release-Steam.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug-Steam.bash  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Mac/U7Revisited/: Makefile
Mac/U7Revisited/nbproject/: Makefile-Debug.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release-Steam.bash  Package-Release.bash  project.xml
Redist/: map.txt  readme.txt  u7revisited
Redist/3dmodels/: 0B4_00.mdl  0B4_01.mdl  0B4_02.mdl  0B4_03.mdl  0B4_04.mdl  0B4_05.mdl  0B4_06.mdl  0B4_07.mdl  0B4_08.mdl  0B4_09.mdl  0B4_10.mdl  0B4_11.mdl  0B6_00.mdl  0B6_01.mdl  0B6_02.mdl  0B6_03.mdl  0B6_04.mdl  0B6_05.mdl  0B6_06.mdl  0B6_07.mdl  0B6_08.mdl  0B6_09.mdl  0B6_10.mdl  0B6_11.mdl  0B7_00.mdl  0B7_01.mdl  0B7_02.mdl  0B7_03.mdl  0B7_04.mdl  0B7_05.mdl  0B7_06.mdl  0B7_08.mdl  0B7_09.mdl  0B7_11.mdl  0C3_00.mdl  0C3_01.mdl  0C3_02.mdl  0C3_03.mdl  0C3_04.mdl  0C3_05.mdl  (+289 more)
Redist/Audio/Music/: powermonger.mod
Redist/Data/: correct_0003H.sh  engine.cfg  equip_slots.json  ghost.cfg  imagestoload.txt  object_walkability.csv  roofimages.csv  roofload.csv  spells.json  terrain_walkable.csv  version.txt
Redist/Data/Fonts/: font.txt  font32x32.txt  font8x8.txt
Redist/Data/GUIs/: ESCMenu.txt  In-Game.txt  MainMenu.txt
Redist/Data/Maps/: Intro.txt  Level1.txt  MainMenuTerrain.txt
Redist/GUI/: ask_exit.ghost  ask_load.ghost  ask_save.ghost  debug_tools.ghost  ghost_color_dialog.ghost  load_save.ghost  minimap.ghost  npc_edit.ghost  npc_list_window.ghost  paperdoll.ghost  paperdoll_biggumps.ghost  script_rename.ghost  script_rename_any.ghost  spell_book.ghost  stats.ghost
Redist/Images/: FontWithAlpha.psd  SRTiles.tga  fireball.tga  font.tga  grass.tga  maininterface.tga  slope.tga  srbackground.tga  starfont.tga  starfont2.tga  tiles.tga
Redist/Models/: chair.vox
Source/: AskExitState.cpp  AskExitState.h  AskState.cpp  AskState.h  CMakeLists.txt  CombatState.cpp  CombatState.h  ConversationState.cpp  ConversationState.h  GUMP.cpp  GUMP.h  GameSerializer.cpp  GameSerializer.h  GumpManager.cpp  GumpManager.h  LoadSaveState.cpp  LoadSaveState.h  LoadingState.cpp  LoadingState.h  Main.cpp  MainState.cpp  MainState.cpp.bak  MainState.cpp.bak2  MainState.h  MainState.h.bak  NpcListWindow.cpp  NpcListWindow.h  ObjectEditorState.cpp  ObjectEditorState.h  OptionsState.cpp  OptionsState.h  Pathfinding.cpp  Pathfinding.h  PathfindingSystem.cpp  PathfindingSystem.h  PathfindingThreadPool.cpp  PathfindingThreadPool.h  PatreonVillageState.cpp  PatreonVillageState.h  ScriptRenameState.cpp  (+42 more)
Source/Geist/: BaseUnits.cpp  BaseUnits.h  Config.cpp  Config.h  Display.cpp  Display.h  Engine.cpp  Engine.h  Font.cpp  Font.h  GUIElements.cpp  GUIElements.h  GUIManager.cpp  GhostSerializer.h  GhostWindow.cpp  GhostWindow.h  Globals.cpp  Globals.h  Gui.cpp  Gui.h  GuiElements.cpp  GuiElements.h  GuiManager.cpp  GuiManager.h  IO.cpp  IO.h  Input.cpp  Input.h  InputSystem.cpp  InputSystem.h  Logging.cpp  Logging.h  MemoryManager.cpp  MemoryManager.h  Object.h  ParticleSystem.cpp  ParticleSystem.h  Primitives.cpp  Primitives.h  RNG.cpp  (+16 more)
Source/Ghost/: ColorPickerState.cpp  ColorPickerState.h  FileChooserState.cpp  FileChooserState.h  FileDialog.cpp  FileDialog.h  GhostSerializer.cpp  GhostSerializer.h  GhostState.cpp  GhostState.h  GhostWindow.cpp  GhostWindow.h  GuiSerializer.cpp  GuiSerializer.h  Main.cpp  SpritePickerState.cpp  SpritePickerState.h  SpriteUtils.h
Tests/: ScriptTestMocks.cpp  ScriptTestMocks.h  ScriptTests.cpp  TestDataLoader.cpp  TestDataLoader.h
docs/: CODING_STANDARDS.md  MODELING_GUIDE.md
game/: u7revisited-raylib.vcxproj  u7revisited-raylib.vcxproj.filters  u7revisited.vcxproj  u7revisited.vcxproj.filters
game/src/: LoadingState.cpp  LoadingState.h  Main.cpp  MainState.cpp  MainState.h  ObjectEditorState.cpp  ObjectEditorState.h  ShapeData.cpp  ShapeData.h  ShapeEditorState.cpp  Terrain.cpp  Terrain.h  TitleState.cpp  TitleState.h  U7Globals.cpp  U7Globals.h  U7Object.cpp  U7Object.h  WorldEditorState.cpp  WorldEditorState.h
raylib-master/: raylib.vcxproj  raylib.vcxproj.filters
resources/Data/: GameProgression.txt  engine.cfg  options.cfg
scripts/: build.bat  build.sh  check_lua_requires.bat  check_lua_requires.sh  copy_executable.bat  copy_executable.sh  plebwerks.py  prepare_pr_readme.sh  run_u7.bat  run_u7.sh  setup_ide.bat  setup_ide.sh  shapeworks.py  u7files.py  u7shapes.py  update.shapetable.py
subprojects/: glfw.wrap  lua.wrap  raylib.wrap
tools/: obj2gltf.py
(+4788 files in other folders)
